Fix for timestamp overlappying blog heading on mobile

--- a/less/plugin-blog.less
+++ b/less/plugin-blog.less
@@ -314,11 +314,10 @@
             padding-right: 40px;
             color: lighten(@color__p--text,15%);
             @media only screen and (max-width: 800px) {
-                max-width: inherit;
-                position: absolute;
-                right: 0;
-                bottom: 0;
-                padding: 0;
+                margin-bottom: 15px;
+                padding: 0 30px;
+                position: relative;
+                text-align: left;
             }
         }
     }
@@ -405,11 +404,10 @@
         top: 0;
         text-align: left;
         .timestamp {
-            max-width: inherit;
+            margin-bottom: 15px;
+            padding: 0 30px;
             position: relative;
-            right: 0;
-            bottom: 0;
-            padding: 0;
+            text-align: left;
         }
     }
     .post-footer .timestamp {
